--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "myapp",
+  "name": "sound-less-dumb",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^16.10.2",
+    "axios": "0.19.0",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
